changed the guide name

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h3>Your Guide</h3>
                     <p class="quote">"I lived in Kainji for over 15 years, so I can show you all of its best parts and hidden
                         secrets."</p>
-                    <h4 class="guide-name">Joy Agbo</h4>
+                    <h4 class="guide-name">Jane Doe</h4>
                 </div>
             </div>
         </section>
